Fix Signout API by removing token blacklisting from generate_jwt
