# db/schema.rb
@@ -10,7 +10,7 @@
 #
 # It's strongly recommended that you check this file into your version control system.
 
-ActiveRecord::Schema[7.1].define(version: 2025_05_05_100241) do
+ActiveRecord::Schema[7.1].define(version: 2025_05_05_164745) do
   # These are extensions that must be enabled in order to support this database
   enable_extension "plpgsql"
 
@@ -68,6 +68,16 @@ ActiveRecord::Schema[7.1].define(version: 2025_05_05_100241) do
     t.index ["reset_password_token"], name: "index_admin_users_on_reset_password_token", unique: true
   end
 
+  create_table "blacklisted_tokens", force: :cascade do |t|
+    t.string "token", null: false
+    t.bigint "user_id", null: false
+    t.datetime "expires_at", null: false
+    t.datetime "created_at", null: false
+    t.datetime "updated_at", null: false
+    t.index ["token"], name: "index_blacklisted_tokens_on_token", unique: true
+    t.index ["user_id"], name: "index_blacklisted_tokens_on_user_id"
+  end
+
   create_table "movies", force: :cascade do |t|
     t.string "title"
     t.string "genre"
@@ -81,6 +91,8 @@ ActiveRecord::Schema[7.1].define(version: 2025_05_05_100241) do
     t.boolean "premium", default: false, null: false
     t.datetime "created_at", null: false
     t.datetime "updated_at", null: false
+    t.string "poster_url"
+    t.string "banner_url"
     t.index ["release_year"], name: "index_movies_on_release_year"
     t.index ["title"], name: "index_movies_on_title"
   end
@@ -139,6 +151,7 @@ ActiveRecord::Schema[7.1].define(version: 2025_05_05_100241) do
 
   add_foreign_key "active_storage_attachments", "active_storage_blobs", column: "blob_id"
   add_foreign_key "active_storage_variant_records", "active_storage_blobs", column: "blob_id"
+  add_foreign_key "blacklisted_tokens", "users"
   add_foreign_key "orders", "movies"
   add_foreign_key "orders", "users"
   add_foreign_key "reviews", "movies"
